c4prj2_input/grade.txt
Grading at Fri Jan  3 03:20:45 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:11:5: error: expected ‘;’ before ‘}’ token
     } else {
     ^
Compilation of input.c failed

Overall Grade: F
